syntax = "proto3";

option go_package = ".;sort_grpc";

package sort_grpc;


service SortService {
  rpc MergeSort (SortRequest) returns (SortResponse) {}
  rpc QuickSort (SortRequest) returns (SortResponse) {}
}

message SortRequest {
  repeated int32 array = 1;
}

message SortResponse {
  repeated int32 sortedArray = 1;
}
